gcc/testsuite/rust/rustc/ui/error-codes/E0184.rs
#[derive(Copy)] // { dg-error ".E0184." "" { target *-*-* } }
struct Foo;

impl Drop for Foo {
    fn drop(&mut self) {
    }
}

fn main() {
}

